--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
-    implementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'junit:junit:4.13.1'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
     implementation 'org.springframework.boot:spring-boot'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
@@ -32,4 +32,8 @@ task"create-dirs" {
     sourceSets*.resources.srcDirs*.each{
         it.mkdirs()
     }
+}
+
+test {
+    useJUnitPlatform()
 }
