--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
     implementation 'org.springframework.boot:spring-boot'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.76'
+    implementation 'cn.hutool:hutool-all:5.8.4'
 }
 
 task"create-dirs" {
